# tinyTorch

./: .gitignore  MANIFEST.in  README.md  linear_regression_model.pkl  pyproject.toml  requirements.txt  run_tests.py  setup.py
docs/: 方案.md
docs/tutorials/: 01_quickstart.md  02_tensor_operations.md  03_autograd_system.md  README.md
examples/basic/: linear_regression.py  linear_regression_model.pkl  quick_test.py
examples/cnn/: mnist_classifier.py
examples/deepseek/: README.md  deepseek_v3_demo.py
examples/nlp/: language_model.py
examples/transformer/: simple_transformer.py
tests/: __init__.py  test_autograd.py  test_integration.py  test_losses.py  test_ndarr.py  test_nn.py  test_optimizers.py  test_tensor.py
tinytorch/: __init__.py
tinytorch/autograd/: __init__.py  function.py  tensor.py  variable.py
tinytorch/autograd/ops/: __init__.py  activation.py  basic.py  conv.py  loss.py  math_ops.py  matrix.py  nn.py  reduce.py  utils.py
tinytorch/ml/: __init__.py  dataset.py  model.py  monitor.py  trainer.py
tinytorch/ml/evaluators/: __init__.py  accuracy.py  evaluator.py
tinytorch/ml/losses/: __init__.py  crossentropy.py  loss.py  mse.py
tinytorch/ml/optimizers/: __init__.py  adam.py  optimizer.py  sgd.py
tinytorch/ndarr/: __init__.py  ndarray.py
tinytorch/nn/: __init__.py  container.py  init.py  module.py  parameter.py
tinytorch/nn/layers/: __init__.py  activation.py  attention.py  conv.py  linear.py  normalization.py  rnn.py
tinytorch/tensor/: shape.py  tensor.py
tinytorch/utils/: __init__.py  data.py  random.py
